feat(vscode-extension): T16.1 Initialize the VS Code extension frontend

--- a/frontend/src/app/components/note-editor-side-panel/note-editor-side-panel.scss
+++ b/frontend/src/app/components/note-editor-side-panel/note-editor-side-panel.scss
@@ -19,7 +19,7 @@
 }
 
 .content-editable-container {
-  // padding: 310px;
+  padding-left: 3px;
   margin-left: 0.5vw; /* Align with dashboard notes */
   border: 1px solid #ccc; /* Big rim around all contents */
 
